Added link to slides

--- a/index.html
+++ b/index.html
@@ -294,7 +294,10 @@ After you have completed the three steps above, just download
 </div>
 <div id="files-youll-need" class="section level2">
 <h2>Files you’ll need</h2>
-<p>Sometime over the weekend (I’ll send a message) I’ll put the slides and templates here.</p>
+<p>Sometime over the weekend (I’ll send a message) I’ll put the slides and files we’ll need here.</p>
+<ul>
+<li><a href="villasenor-derbez.com/intro2Rmd/CourseMaterials/intro2Rmd.html">Rmakrdown slides</a> (Yes, I am re-using them)</li>
+</ul>
 <hr />
 <p>Other resources</p>
 <ul>
