Added link to slides

--- a/index.html
+++ b/index.html
@@ -296,7 +296,7 @@ After you have completed the three steps above, just download
 <h2>Files you’ll need</h2>
 <p>Sometime over the weekend (I’ll send a message) I’ll put the slides and files we’ll need here.</p>
 <ul>
-<li><a href="www.villasenor-derbez.com/intro2Rmd/CourseMaterials/intro2Rmd.html">Rmakrdown slides</a> (Yes, I am re-using them)</li>
+<li><a href="https://www.villasenor-derbez.com/intro2Rmd/CourseMaterials/intro2Rmd.html">Rmakrdown slides</a> (Yes, I am re-using them)</li>
 </ul>
 <hr />
 <p>Other resources</p>
