added magrittr and cowplot to the list of required packages

--- a/index.html
+++ b/index.html
@@ -238,7 +238,9 @@ div.tocify {
                    &quot;tidyverse&quot;,
                    &quot;rmarkdown&quot;,
                    &quot;knitr&quot;,
-                   &quot;bookdown&quot;))</code></pre>
+                   &quot;bookdown&quot;,
+                   &quot;magrittr&quot;,
+                   &quot;cowplot&quot;))</code></pre>
 <p>If you are curious and can’t wait until Tuesday, these is what they do:</p>
 <ul>
 <li><a href="http://desolve.r-forge.r-project.org/"><code>deSolve</code></a>: a bunch of numerical methods to solve Ordinary Differential equations (things like <span class="math inline">\(\frac{dN}{dt} = rN\)</span>, but more complex)</li>
