Added all files

--- a/index.html
+++ b/index.html
@@ -224,6 +224,7 @@ div.tocify {
 </div>
 
 
+<p>The goal for this workshop is to step a bit away from ecology / fisheries management (just a bit), and focus more on code and skill that will help you be way more efficient (and look like a pro). If it all works, we should be able to write a manuscritp that has references, equations, figures, and tables… all within <code>R</code>! It should look like <a href="AwesomeArticle.pdf">this</a>.</p>
 <div id="before-tuesday" class="section level1">
 <h1><strong>BEFORE TUESDAY!</strong></h1>
 <p>I hope that bold, all caps, exclamation is enough… but please, <em>please</em>, <strong>please</strong>, complete these 3 steps before Tuesday. You don’t have to read all, you can just copy-paste the code, and do the things specified as</p>
@@ -279,16 +280,25 @@ After you have completed the three steps above, just download
 <p>R will do its thing, and if everything works, you’ll get a nice(ish) PDF document… We’ll make it look better!</p>
 <p>Not working? Send me a message and we’ll figure out a time to meet and see what’s happening</p>
 </div>
-<div id="files-youll-need" class="section level2">
-<h2>Files you’ll need</h2>
+<div id="files" class="section level2">
+<h2>Files</h2>
 <p>Sometime over the weekend (I’ll send a message) I’ll put the slides and files we’ll need here.</p>
 <ul>
-<li><a href="http://www.villasenor-derbez.com/intro2Rmd/CourseMaterials/intro2Rmd.html">Rmakrdown slides</a> (Yes, I am re-using them)</li>
+<li><a href="http://www.villasenor-derbez.com/intro2Rmd/CourseMaterials/intro2Rmd.html">Rmakrdown slides</a></li>
+<li><a href="class_materials.zip">Class materials</a></li>
 </ul>
+<p>This is what we will be modelling:</p>
+<span class="math display">\[\begin{equation}
+\begin{split} \label{eq:pred_prey}
+\frac{dA}{dt} = I_AA - d_AA - aAS \\
+\frac{dS}{dt} = ar_SAS - d_SS -fS
+\end{split}
+\end{equation}\]</span>
+<p>Do you know what it is? Full definition in class</p>
 <hr />
 <p>Other resources</p>
 <ul>
-<li><a href="http://r4ds.had.co.nz/">R for Data Science FREE online book</a></li>
+<li><a href="http://r4ds.had.co.nz/">R for Data Science FREE online book</a> -<a href="https://rmarkdown.rstudio.com/pdf_document_format.html">Guide to PDF documents in Rmarkdown</a></li>
 </ul>
 </div>
 </div>
