Added class notes

--- a/index.html
+++ b/index.html
@@ -219,7 +219,7 @@ div.tocify {
 <h1 class="title toc-ignore">LAFF R course</h1>
 <h3 class="subtitle"><em>Numerical modeling and RMarkdown</em></h3>
 <h4 class="author"><em>Juan Carlos Villaseñor-Derbez</em></h4>
-<h4 class="date"><em>last update: 2018-02-16</em></h4>
+<h4 class="date"><em>last update: 2018-02-20</em></h4>
 
 </div>
 
@@ -286,11 +286,12 @@ After you have completed the three steps above, just download
 <ul>
 <li><a href="http://www.villasenor-derbez.com/intro2Rmd/CourseMaterials/intro2Rmd.html">Rmakrdown slides</a></li>
 <li><a href="class_materials.zip">Class materials</a></li>
+<li><a href="notes.html">Class notes</a></li>
 </ul>
 <p>This is what we will be modelling:</p>
 <span class="math display">\[\begin{equation}
 \begin{split} \label{eq:pred_prey}
-\frac{dA}{dt} = I_AA - d_AA - aAS \\
+\frac{dA}{dt} = I_A - d_AA - aAS \\
 \frac{dS}{dt} = ar_SAS - d_SS -fS
 \end{split}
 \end{equation}\]</span>
@@ -298,7 +299,9 @@ After you have completed the three steps above, just download
 <hr />
 <p>Other resources</p>
 <ul>
-<li><a href="http://r4ds.had.co.nz/">R for Data Science FREE online book</a> -<a href="https://rmarkdown.rstudio.com/pdf_document_format.html">Guide to PDF documents in Rmarkdown</a></li>
+<li><a href="http://r4ds.had.co.nz/">R for Data Science FREE online book</a></li>
+<li><a href="https://rmarkdown.rstudio.com/pdf_document_format.html">Guide to PDF documents in Rmarkdown</a></li>
+<li><a href="http://editor.citationstyles.org/about/">CSL styles</a></li>
 </ul>
 </div>
 </div>
