Added lotka-volterra instead

--- a/index.html
+++ b/index.html
@@ -289,12 +289,12 @@ After you have completed the three steps above, just download
 <li><a href="notes.html">Class notes</a></li>
 </ul>
 <p>This is what we will be modelling:</p>
-<span class="math display">\[\begin{equation}
-\begin{split} \label{eq:pred_prey}
-\frac{dA}{dt} = I_A - d_AA - aAS \\
-\frac{dS}{dt} = ar_SAS - d_SS -fS
+<p><span class="math display">\[
+\begin{split}
+&amp; \text{Prey:} &amp;&amp; \frac{dN}{dt} = r N - a N P \\     
+&amp; \text{Predator:} &amp;&amp; \frac{dP}{dt} = c a N P - m P
 \end{split}
-\end{equation}\]</span>
+\]</span></p>
 <p>Do you know what it is? Full definition in class</p>
 <hr />
 <p>Other resources</p>
