--- a/notes.html
+++ b/notes.html
@@ -310,14 +310,14 @@ output:
 </ul>
 <pre><code>\begin{equation}
 \begin{split} \label{eq:pred_prey}
-\frac{dA}{dt} = I_A - d_AA - aAS \\
-\frac{dS}{dt} = ar_SAS - d_SS -fS
+\frac{dN}{dt} = r N - a N P \\   
+\frac{dP}{dt} = c a N P - m P -fP
 \end{split}
 \end{equation}</code></pre>
 <span class="math display">\[\begin{equation}
 \begin{split} \label{eq:pred_prey}
-\frac{dA}{dt} = I_A - d_AA - aAS \\
-\frac{dS}{dt} = ar_SAS - d_SS -fS
+\frac{dN}{dt} = r N - a N P \\   
+\frac{dP}{dt} = c a N P - m P -fP
 \end{split}
 \end{equation}\]</span>
 </div>
