--- a/index.html
+++ b/index.html
@@ -224,10 +224,10 @@ div.tocify {
 </div>
 
 
-<p>The goal for this workshop is to step a bit away from ecology / fisheries management (just a bit), and focus more on code and skill that will help you be way more efficient (and look like a pro). If it all works, we should be able to write a manuscritp that has references, equations, figures, and tables… all within <code>R</code>! It should look like <a href="AwesomeArticle.pdf">this</a>.</p>
-<div id="before-tuesday" class="section level1">
-<h1><strong>BEFORE TUESDAY!</strong></h1>
-<p>I hope that bold, all caps, exclamation is enough… but please, <em>please</em>, <strong>please</strong>, complete these 3 steps before Tuesday. You don’t have to read all, you can just copy-paste the code, and do the things specified as</p>
+<p>The goal for this workshop is to step a bit away from ecology / fisheries management (just a bit), and focus more on code and skill that will help you be way more efficient (and look like a pro). If it all works, we should be able to write a manuscritp that has references, equations, figures, and tables… all within <code>R</code>! It should look like <a href="AwesomeArticle.pdf">this</a> or <a href="MyManuscript.pdf">this</a>, or <a href="https://rawgit.com/jcvdav/ReserveEffect/master/Frontiers_Manuscript/Villasenor-Derbez.pdf">this</a>.</p>
+<div id="before-course" class="section level1">
+<h1><strong>BEFORE COURSE!</strong></h1>
+<p>I hope that bold, all caps, exclamation is enough… but please, <em>please</em>, <strong>please</strong>, complete these 3 steps before the course. You don’t have to read all, you can just copy-paste the code, and do the things specified as</p>
 <blockquote>
 <p>Text of instructions</p>
 </blockquote>
@@ -280,24 +280,40 @@ After you have completed the three steps above, just download
 <p>R will do its thing, and if everything works, you’ll get a nice(ish) PDF document… We’ll make it look better!</p>
 <p>Not working? Send me a message and we’ll figure out a time to meet and see what’s happening</p>
 </div>
+</div>
+<div id="day-of-course" class="section level1">
+<h1>Day of course</h1>
 <div id="files" class="section level2">
 <h2>Files</h2>
 <p>Sometime over the weekend (I’ll send a message) I’ll put the slides and files we’ll need here.</p>
 <ul>
 <li><a href="http://www.villasenor-derbez.com/intro2Rmd/CourseMaterials/intro2Rmd.html">Rmakrdown slides</a></li>
 <li><a href="class_materials.zip">Class materials</a></li>
-<li><a href="notes.html">Class notes</a></li>
+<li><p><a href="notes.html">Class notes</a></p></li>
+<li>Manuscript files:
+<ul>
+<li>Manuscript we did in class:
+<ul>
+<li><a href="MyManuscript.pdf">Manuscript</a></li>
+<li><a href="MyManuscript.Rmd">Manuscript source file</a></li>
+</ul></li>
+<li>Manuscript with numerical simulation:
+<ul>
+<li><a href="AwesomeArticle.pdf">Manuscript</a></li>
+<li><a href="AwesomeArticle.Rmd">Manuscript source file</a></li>
+</ul></li>
+</ul></li>
 </ul>
-<p>This is what we will be modelling:</p>
-<p><span class="math display">\[
+<p>This is what is being modeled in the numerical simulation manuscript:</p>
+<span class="math display">\[\begin{equation}
 \begin{split}
 &amp; \text{Prey:} &amp;&amp; \frac{dN}{dt} = r N - a N P \\     
 &amp; \text{Predator:} &amp;&amp; \frac{dP}{dt} = c a N P - m P
 \end{split}
-\]</span></p>
-<p>Do you know what it is? Full definition in class</p>
-<hr />
-<p>Other resources</p>
+\end{equation}\]</span>
+</div>
+<div id="other-resources" class="section level2">
+<h2>Other resources</h2>
 <ul>
 <li><a href="http://r4ds.had.co.nz/">R for Data Science FREE online book</a></li>
 <li><a href="https://rmarkdown.rstudio.com/pdf_document_format.html">Guide to PDF documents in Rmarkdown</a></li>
